<resources>
    <string name="app_name">Rtoosh Provider</string>
    <string name="skip">Skip</string>
    <string name="events_collection">EVENTS COLLECTION</string>
    <string name="slider_one_des">Discover the best things to do this week in your city</string>
    <string name="slider_two_des">Connect with your friends, follow tastemakers and people who share your interests.</string>
    <string name="connect_follow"><![CDATA[CONNECT & FOLLOW]]></string>
    <string name="book_share"><![CDATA[BOOK & SHARE]]></string>
    <string name="slider_three_des">Book events so easy in two steps and share it with your friends.</string>
    <string name="google_maps_key">AIzaSyD_yFbWsbyc_glqWxGYHgTmyaBVpcJNj8s</string>
    <string name="approved_services">Approved Services</string>
    <string name="new_service_request">New Services Request</string>
    <string name="go_online">Go Online</string>
    <string name="you_are_offline">You Are Offline</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="check_services_you_will_provide">Check services you will provide:</string>
    <string name="go_online_agreement">GO online agreement</string>
    <string name="terms_of_direct_service">When you agree to provide direct services you can not cancel any order you received. Canceling orders displays your acccount for automatic shutdown. \n \nDo you agree to the Terms of Direct Services?</string>
    <string name="cancel">Cancel</string>
    <string name="agree">Agree</string>
    <string name="you_are_online_now">You Are Online Now</string>
    <string name="waiting_for_request">Waiting for request</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="minutes">Min</string>
    <string name="seconds">Sec</string>
    <string name="colon">:</string>
    <string name="order_details">Order Details</string>
    <string name="total_price">Total price</string>
    <string name="customer_info">Customer info:</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="order_total_time">Order total time</string>
    <string name="min">min</string>
    <string name="hrs">hrs</string>
    <string name="google_map">Google Map</string>
    <string name="share_location">Share location</string>
    <string name="eta">ETA</string>
    <string name="eta_value">35 min (15.7 km)</string>
    <string name="prepare">Prepare</string>
    <string name="i_m_ready">I\'m Ready</string>
    <string name="time_value">4 min 56 sec left</string>
    <string name="prepare_tools_and_start">Prepare your tools and communicate with the customer to clarify some details such as hair dyes.</string>
    <string name="expected_time_to_arrive">Expected time to arrive</string>
    <string name="start_the_service">Start the service</string>
    <string name="hair_cut">Hair cut</string>
    <string name="expected_time_to_finish">Expected time to finish</string>
    <string name="based_on_total_service">Based on total hours of service in customer order</string>
    <string name="service_completed">Service completed</string>
    <string name="total_amount">Total Amount</string>
    <string name="invoice_breakdown">Invoice Breakdown</string>
    <string name="service_commission">Service commission</string>
    <string name="total">Total</string>
    <string name="purchase_detail">Purchase Detail</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="done">Done</string>
    <string name="additional_services">Did you offer additional services?</string>
    <string name="thank_you">Thank You</string>
    <string name="your_customer_was">Your customer was:</string>
    <string name="additional_service">Additional service!</string>
    <string name="number_of_services">Number of services?</string>
    <string name="send">Send</string>
    <string name="note">Note</string>
    <string name="total_paid">Total paid?</string>
    <string name="how_was_the_customer">How was the customer?</string>
    <string name="your_feedback">Your Feedback</string>
    <string name="decline_a_request">Decline a request !</string>
    <string name="decline_warning">If you decline this request your account may be suspended.</string>
    <string name="decline_reason">Decline reason?</string>
    <string name="sure_decline">I\'m sure decline</string>
    <string name="feedback_submitted">Your feedback has been submitted</string>
    <string name="request_declined">Your request has been declined</string>
    <string name="verify_your_phone_number">Enter your phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_number_text">Enter your phone number to create an account or sign in.</string>
    <string name="country_code">+966</string>
    <string name="access_code">Enter Access Code!</string>
    <string name="access_code_verification_text">We have sent you an access code via SMS for mobile number verification</string>
    <string name="resend_code">Resend Code</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="register">Register!</string>
    <string name="terms_and_conditions">By register you agreed to our terms and conditions</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="select">Select</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="account_status">Account Status</string>
    <string name="not_active">&#160; Not Active</string>
    <string name="complete_following">Please complete the following to activate your account</string>
    <string name="id_information">ID information</string>
    <string name="upload_copy_of_your_id">Upload copy of your id</string>
    <string name="select_type_of_work">Select type of work</string>
    <string name="id_number">ID Number</string>
    <string name="issue_date">Issue Date</string>
    <string name="id_type">ID Type</string>
    <string name="copy_of_your_id">Copy of your ID</string>
    <string name="uploading">Uploading </string>
    <string name="online">Online</string>
    <string name="schedule">Schedule</string>
    <string name="note_work">Please note : you can\'t go online if you have scheduled appointment in less than two hours</string>
    <string name="pick_your_schedule">Pick your schedule</string>
    <string name="upload">Upload</string>
    <string name="title_activity_register_order">RegisterOrderActivity</string>
    <string name="minimum_order">Minimum Order</string>
    <string name="maximum_persons_services"><![CDATA[Maximum persons & services]]></string>
    <string name="pick_schedule">Pick schedule</string>
    <string name="persons">Persons</string>
    <string name="person_serve">How many persons you want to serve per order</string>
    <string name="maximum_persons_per_order">Maximum persons per order</string>
    <string name="add">add</string>
    <string name="less">less</string>
    <string name="service">Services</string>
    <string name="maximum_service_per_order">Maximum service per order</string>
    <string name="services_per_order">How many services you want to provide per order</string>
    <string name="set_your_minimum_order">Set your minimum order</string>
    <string name="add_service_for_customer">Please add at least one type of service to be available for customer service</string>
    <string name="your_service_list">Your Service list</string>
    <string name="hair">Hair</string>
    <string name="makeup">Makeup</string>
    <string name="nails">Nails</string>
    <string name="public_account_information">Public Account Information</string>
    <string name="surname">Nickname, This name will show to customer</string>
    <string name="bio">Bio</string>
    <string name="my_work">My Work</string>
    <string name="choose_best_photo">Choose one of your best photo that shows your perfect work to get more customers</string>
    <string name="save">Save</string>
    <string name="hair_selection_new_services">Hair Selection New Services</string>
    <string name="service_name">Service Name</string>
    <string name="description">Description</string>
    <string name="price">Price in SAR</string>
    <string name="service_duration">Service Duration(hh:mm)</string>
    <string name="duration">Duration</string>
    <string name="verify">Verify</string>
    <string name="background_photo">Background photo</string>
    <string name="toast_invalid_number">Please enter the valid mobile number</string>
    <string name="toast_digits_access_code">Please enter the 4-digits access code</string>
    <string name="toast_fill_data">Please fill all the data</string>
    <string name="toast_invalid_email">Please enter the valid email address</string>
    <string name="toast_invalid_password_length">Password must contains at least 6 letters</string>
    <string name="pick_image_intent_text">Select Image</string>
    <string name="grant_permissions">Please grant all the permissions</string>
    <string name="set_minimum_order">Please set your minimum price for your order</string>
    <string name="log_in">Log In</string>
    <string name="all_requests">All Requests</string>
    <string name="new_requests">New Requests</string>
    <string name="approved_requests">Approved Requests</string>
    <string name="service_note">Please note service details will show up after you accept this request</string>
    <string name="details">Details</string>
    <string name="left">Left</string>
    <string name="time_date"><![CDATA[Time & Date]]></string>
    <string name="number_of_persons">Number of persons</string>
    <string name="time_left">Time Left</string>
    <string name="order_number">Order number</string>
    <string name="service_details">Service Details</string>
    <string name="incorrect_otp">Incorrect OTP entered. Please try again.</string>
    <string name="error_no_internet">Please check your internet connection and try again.</string>
    <string name="uploaded">Uploaded</string>
    <string name="error_work_type">Please select your work type</string>
    <string name="error_upload_id">Please upload your copy of id</string>
    <string name="error_hours_range">Hours should be in range of 0–12</string>
    <string name="error_minutes_range">Minutes should be in range of 0–59</string>
    <string name="error_duration_format">Please enter the service duration in hh:mm format</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="history">History</string>
    <string name="nav_calendar">Calendar</string>
    <string name="reviews">Reviews</string>
    <string name="report">Report</string>
    <string name="settings">Services</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_password_to_continue">Enter your password to continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="set_time">Set time</string>
    <string name="hh">HH</string>
    <string name="mm">MM</string>
    <string name="type_in_time">Type in time(24-hour Format)</string>
    <string name="error_invalid_time">Enter a valid time</string>
    <string name="slider_intro_services"><![CDATA[Makeup, Hair cut, Nails & More…]]></string>
    <string name="slider_1_description">Salon services at your home</string>
    <string name="slider_1_title">For the first time in</string>
    <string name="slider_1_city">Saudi Arabia</string>
</resources>