<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slider_1_title"
        android:textSize="@dimen/_20sdp"
        android:textAppearance="@style/TextAppearance.FontMedium"
        android:textColor="@color/colorRed"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slider_1_city"
        android:textSize="@dimen/_20sdp"
        android:textAppearance="@style/TextAppearance.FontMedium"
        android:textColor="@color/colorAccent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/provider_image_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slider_1_description"
        android:textSize="@dimen/_15sdp"
        android:textAppearance="@style/TextAppearance.FontMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slider_intro_services"
        android:textSize="@dimen/_15sdp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:textAppearance="@style/TextAppearance.FontMedium"
        android:textColor="@color/colorRed"/>

</LinearLayout>