<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_bg"
    android:orientation="vertical"
    tools:context="com.rtoosh.provider.views.activities.OtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="@dimen/_20sdp"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@mipmap/ic_launcher"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/access_code"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="@dimen/_30sdp"
            android:textSize="@dimen/_15sdp"
            android:textAppearance="@style/TextAppearance.FontMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:textColor="@color/colorGrayDark"
            android:textAppearance="@style/TextAppearance.FontMedium"
            android:text="@string/access_code_verification_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="match_parent"
                android:hint="@string/one"
                android:maxLength="1"
                android:background="@drawable/custom_stroke_pink"
                android:textAppearance="@style/TextAppearance.FontBold"
                android:gravity="center"
                android:inputType="number"/>

            <View
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edit2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="match_parent"
                android:hint="@string/two"
                android:maxLength="1"
                android:imeOptions="actionNext"
                android:background="@drawable/custom_stroke_pink"
                android:textAppearance="@style/TextAppearance.FontBold"
                android:gravity="center"
                android:nextFocusForward="@+id/edit3"
                android:inputType="number"/>

            <View
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edit3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="match_parent"
                android:hint="@string/three"
                android:maxLength="1"
                android:imeOptions="actionNext"
                android:background="@drawable/custom_stroke_pink"
                android:textAppearance="@style/TextAppearance.FontBold"
                android:gravity="center"
                android:nextFocusForward="@+id/edit4"
                android:inputType="number"/>

            <View
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edit4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="match_parent"
                android:hint="@string/four"
                android:maxLength="1"
                android:imeOptions="actionDone"
                android:background="@drawable/custom_stroke_pink"
                android:textAppearance="@style/TextAppearance.FontBold"
                android:gravity="center"
                android:inputType="number"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:paddingLeft="@dimen/_50sdp"
            android:paddingRight="@dimen/_50sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:foreground="@drawable/ripple"
            style="?borderlessButtonStyle"
            android:onClick="otpDone"
            android:textAppearance="@style/TextAppearance.FontMedium"
            android:background="@drawable/custom_basic_gradient_rounded"
            android:layout_marginTop="@dimen/_30sdp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/resend_code"
        android:textColor="@color/colorWhite"
        android:foreground="@drawable/ripple"
        style="?borderlessButtonStyle"
        android:drawableRight="@drawable/ic_resend_code"
        android:drawableEnd="@drawable/ic_resend_code"
        android:paddingRight="@dimen/_20sdp"
        android:paddingLeft="@dimen/_20sdp"
        android:textAppearance="@style/TextAppearance.FontMedium"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custom_basic_gradient"/>

</RelativeLayout>
