<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp"
    tools:context="com.rtoosh.provider.views.PhoneVerificationActivity">

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@mipmap/ic_launcher"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="@dimen/_30sdp"
        android:textSize="@dimen/_15sdp"
        android:textAppearance="@style/TextAppearance.FontMedium"/>

    <TextView
        android:id="@+id/tvProviderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.FontMedium"
        android:text="Rishav"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password_to_continue"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="@dimen/_30sdp"
        android:textSize="@dimen/_12sdp"
        android:padding="@dimen/_5sdp"
        android:layout_gravity="start"
        android:textAppearance="@style/TextAppearance.FontMedium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal"
        android:background="@drawable/custom_edit_text_bg">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/custom_left_rounded_gradient"
            android:contentDescription="@null"
            android:padding="@dimen/_10sdp"
            android:src="@mipmap/ic_password" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textAppearance="@style/TextAppearance.FontMedium"
            android:textColorHint="@color/colorGrayDark" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorAccent"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_12sdp"
        android:layout_gravity="end"
        android:background="?selectableItemBackground"
        android:foreground="?selectableItemBackground"
        android:textAppearance="@style/TextAppearance.FontMedium"/>

    <Button
        android:id="@+id/btDone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/done"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:paddingLeft="@dimen/_50sdp"
        android:paddingRight="@dimen/_50sdp"
        android:paddingStart="@dimen/_50sdp"
        android:paddingEnd="@dimen/_50sdp"
        android:foreground="@drawable/ripple"
        android:textAppearance="@style/TextAppearance.FontMedium"
        android:background="@drawable/custom_basic_gradient_rounded"
        android:layout_marginTop="@dimen/_20sdp"/>

</LinearLayout>
