<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_30sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_service"
            android:textSize="@dimen/_15sdp"
            android:textAppearance="@style/TextAppearance.FontMedium"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_services"
            android:textAppearance="@style/TextAppearance.FontMedium"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_5sdp"
            android:textAppearance="@style/TextAppearance.FontMedium"
            android:background="@drawable/custom_edit_text_bg"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_paid"
            android:textAppearance="@style/TextAppearance.FontMedium"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/custom_edit_text_bg"
            android:inputType="number"
            android:padding="@dimen/_5sdp"
            android:textAppearance="@style/TextAppearance.FontMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textAppearance="@style/TextAppearance.FontMedium"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:padding="@dimen/_5sdp"
            android:gravity="top"
            android:textAppearance="@style/TextAppearance.FontMedium"
            android:background="@drawable/custom_edit_text_bg"
            android:inputType="text"/>

        <TextView
            android:id="@+id/tvSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textColor="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.FontMedium"
            android:textAllCaps="false"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5sdp"
            style="?borderlessButtonStyle"
            android:foreground="?selectableItemBackground"/>

    </LinearLayout>

</android.support.v7.widget.CardView>